<?xml version="1.0"?>
<package format="2">
  <name>rvio2</name>
  <version>0.0.0</version>
  <description>Square-root robocentric visual-inertial odometry with online spatiotemporal calibration</description>

  <author email="zhuai@udel.edu">Zheng Huai</author>
  <maintainer email="zhuai@udel.edu">Zheng Huai</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rosbag</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>

</package>
